# film

./: CMakeLists.txt  FilmGUI.cmake  FilmServer.cmake  FilmWorker.cmake  film.cpp  film.h  film_gui.cpp  film_server.cpp  film_worker.cpp  frame_coordinator.h  main.cpp  ray.h  refl_t.h  sphere.h  vec3.h
camera/: CMakeLists.txt  camera.cpp  camera.h
cameras/: CMakeLists.txt  camera.cpp  camera.h  pinhole.cpp  pinhole.h
gui/: CMakeLists.txt  gui.cpp  gui.h
hitable/: CMakeLists.txt  hit_record.h  hitable.cpp  hitable.h  hitable_compose.cpp  hitable_compose.h  plane.cpp  plane.h  sphere.cpp  sphere.h
math/: CMakeLists.txt  constants.h  normal.cpp  normal.h  point3.cpp  point3.h  random.h  ray.cpp  ray.h  rgb.cpp  rgb.h  vec3.cpp  vec3.h
network/: CMakeLists.txt  client.cpp  client.h  constants.h  coordinator.cpp  coordinator.h  film_job_coordinator.cpp  film_job_coordinator.h  film_job_t.cpp  film_job_t.h  film_server.cpp  film_server.h  frame_coordinator.cpp  frame_coordinator.h  message_t.h  qdatastream.cpp  qdatastream.h  server.cpp  server.h  worker.cpp  worker.h
renderer/: CMakeLists.txt  film.cpp  film.h  renderer.cpp  renderer.h  scene.cpp  scene.h  worker.cpp  worker.h
renderer/math/: CMakeLists.txt  normal.cpp  normal.h  rgb.cpp  rgb.h
scene/: CMakeLists.txt  film.cpp  film.h  renderer.cpp  renderer.h  scenegraph.cpp  scenegraph.h
server/: CMakeLists.txt  callbacks.cpp  callbacks.h  message.h  server.cpp  server.h  write.cpp  write.h
tracers/: CMakeLists.txt  multiple_objects.cpp  multiple_objects.h  singlesphere.cpp  singlesphere.h  tracer.cpp  tracer.h
